[package]
name = "rustywt"
version = "0.1.0"
edition = "2021"
authors = ["Joao Prado joaoprado275@gmail.com"]
description = "A simple JWT (JSON Web Token) crate implemented in Rust, focusing on the HS256 (HMAC SHA-256) algorithm."
license = "MIT"
repository = "https://github.com/joaoprado-rs/rustywt"
homepage = "https://github.com/joaoprado-rs/rustywt"
documentation = "https://docs.rs/rustywt"
readme = "README.md"
keywords = ["jwt", "jsonwebtoken", "authentication", "rust"]
categories = ["authentication", "cryptography"]

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
hmac = "0.12.1"
hex-literal = "0.4.1"
